--- a/assets/scss/modules/_cart-drawer.scss
+++ b/assets/scss/modules/_cart-drawer.scss
@@ -833,11 +833,21 @@
 	background: $color-neon-tide;
 	border-radius: $radius-md;
 	overflow: hidden;
+
+	&.is-open {
+		.cart-drawer__subscribe-body {
+			display: block;
+		}
+
+		.cart-drawer__subscribe-icon-plus {
+			display: none;
+		}
+	}
 }
 
 .cart-drawer__subscribe-toggle {
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: row nowrap;
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
@@ -853,6 +863,7 @@
 }
 
 .cart-drawer__subscribe-body {
+	display: none;
 	padding: 0 responsive($spacing-16) responsive($spacing-16);
 }
 
